; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_subs.c_nfsm_chain_offset.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_subs.c_nfsm_chain_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsm_chain = type { i64, i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfsm_chain_offset(%struct.nfsm_chain* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nfsm_chain*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.nfsm_chain* %0, %struct.nfsm_chain** %3, align 8
  store i32 0, i32* %5, align 4
  %6 = load %struct.nfsm_chain*, %struct.nfsm_chain** %3, align 8
  %7 = getelementptr inbounds %struct.nfsm_chain, %struct.nfsm_chain* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %4, align 8
  br label %9

9:                                                ; preds = %35, %1
  %10 = load i64, i64* %4, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %38

12:                                               ; preds = %9
  %13 = load i64, i64* %4, align 8
  %14 = load %struct.nfsm_chain*, %struct.nfsm_chain** %3, align 8
  %15 = getelementptr inbounds %struct.nfsm_chain, %struct.nfsm_chain* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp eq i64 %13, %16
  br i1 %17, label %18, label %28

18:                                               ; preds = %12
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.nfsm_chain*, %struct.nfsm_chain** %3, align 8
  %21 = getelementptr inbounds %struct.nfsm_chain, %struct.nfsm_chain* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 8
  %23 = load i64, i64* %4, align 8
  %24 = call i64 @mbuf_data(i64 %23)
  %25 = trunc i64 %24 to i32
  %26 = sub nsw i32 %22, %25
  %27 = add nsw i32 %19, %26
  store i32 %27, i32* %2, align 4
  br label %40

28:                                               ; preds = %12
  %29 = load i64, i64* %4, align 8
  %30 = call i64 @mbuf_len(i64 %29)
  %31 = load i32, i32* %5, align 4
  %32 = sext i32 %31 to i64
  %33 = add nsw i64 %32, %30
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %28
  %36 = load i64, i64* %4, align 8
  %37 = call i64 @mbuf_next(i64 %36)
  store i64 %37, i64* %4, align 8
  br label %9

38:                                               ; preds = %9
  %39 = load i32, i32* %5, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %38, %18
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i64 @mbuf_data(i64) #1

declare dso_local i64 @mbuf_len(i64) #1

declare dso_local i64 @mbuf_next(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
